--- a/02-blackjack/index.html
+++ b/02-blackjack/index.html
@@ -17,15 +17,15 @@
     <div class="row mt-2">
         <div id="divBotones" class="col text-center">
             <button id="btnNuevo" class="btn btn-danger">Nuevo Juego</button>
-            <button id="btnPedir" class="btn btn-primary">Pedir Carta</button>
-            <button id="btnDetener" class="btn btn-primary">Detener</button>
+            <button id="btnPedir" disabled="disabled" class="btn btn-primary">Pedir Carta</button>
+            <button id="btnDetener" disabled="disabled" class="btn btn-primary">Detener</button>
         </div>
     </div>
 
     <div class="row container">
         <div class="col">
             <h2>Jugador 1 - <small>0</small></h2>
-            <div id="jugador-cartas">
+            <div id="jugador-cartas" class="divCartas">
                 <!-- <img class="carta" src="./assets/cartas/3D.png"> -->
             </div>
         </div>
@@ -34,13 +34,18 @@
     <div class="row container mt-2">
         <div class="col">
             <h2>Computadora - <small>0</small></h2>
-            <div id="computadora-cartas">
+            <div id="computadora-cartas" class="divCartas">
                 <!-- <img class="carta" src="./assets/cartas/AS.png"> -->
             </div>
         </div>
     </div>
 
     <script src="./assets//js/underscore-min.js"></script>
-    <script src="./assets/js/juego.js"></script>
+    <script src="./assets/js/juego-min.js"></script>
+    <script>
+        document.querySelector('#btnNuevo').addEventListener('click', ()=>{
+            miModulo.nuevoJuego();
+        });
+    </script>
 </body>
 </html>
