--- a/01-fundamentos/index.html
+++ b/01-fundamentos/index.html
@@ -11,6 +11,12 @@
         Con lo que sea
     </p>
     <!-- <script src="assets/js/ciclos/while-do-while.js"></script> -->
-    <script src="assets/js/ciclos/for.js"></script>
+    <!-- <script src="assets/js/ciclos/for.js"></script> -->
+    <!-- <script src="assets/js/classes/problema.js"></script> -->
+    <!-- <script src="assets/js/classes/class.js"></script> -->
+    <!-- <script src="assets/js/classes/subclases.js"></script> -->
+    <!-- <script src="assets/js/classes/esnext.js"></script> -->
+    <!-- <script src="assets/js/classes/singleton.js"></script> -->
+    <script src="assets/js/classes/constructores-multiples.js"></script>
 </body>
 </html>
